release: address SonarCloud quality gate findings
Fix the reliability, security and maintainability issues reported on the
release-automation PR and raise new-code test coverage above the 80%
threshold:

- FinalizeCommand: re-interrupt on caught InterruptedException (S2142) and
  switch the Apache Reporter date handling to java.time (S2143)
- UpdateDistCommand: pin the svn/svnmucc PATH to fixed system directories
  (S4036), use Stream.toList() (S6204) and drop a code-like comment (S125)
- RepositoryService: use Stream.toList() (S6204)
- Create/ReleaseJiraVersion, UpdateReporter, UpdateLocalSite commands:
  return empty collections instead of null and check isEmpty() (S1168)
- TallyVotesCommandTest: use a text block (S6126)

Add tests covering the new command flows, error/usage paths, the
content-browsing release lookup and reporter handling.